# data-management

./: .pre-commit-config.yaml  README.md  catalog.yaml  environment.yml  pyproject.toml
.github/ISSUE_TEMPLATE/: new_dataset.yaml
.github/workflows/: catalog.yml  deploy.yaml  gcs-size-report.yml  main.yml  transfer.yaml  transfer_https.yaml
catalog/: README.md  Untitled.ipynb  _export_pangeo_forge_api.py  consolidated-web-catalog.json  generate.py  input.yaml  large_ensemble_pco2_testbed.yaml  schema.py
catalog/datasets/: CM2.6 2xCO2.yaml  CM2.6 4xCO2.yaml  CM2.6.yaml  CM2_6_2xCO2.yaml  HadISST.json  HadISST.yaml  australian-gridded-climate-data-agcd.yaml  aviso.yaml  cmip6-pmip.yaml  cmip6-static-ocean-grids.yaml  cmip6.yaml  consolidated-web-catalog.json  e-obs-dataset.yaml  evolv2k-vssi-database.yaml  global-precipitation-climatology-project.yaml  hadley-centre-sea-ice-and-sea-surface-temperature-hadisst.yaml  lmrv2.1-monte-carlo-runs-for-gridded-fields.yaml  noaa-coastwatch-geo-polar-sst.yaml  woa-2018-1-degree-monthly.yaml
catalog/inputs/: HadISST.yaml  aviso.yaml  gpcp.yaml
catalog/leap-ingested/: large_ensemble_pco2_testbed.yaml
catalog/output/: consolidated-web-catalog.json
catalog/validator/: schema.json  schema.py  schema.yaml  (+1 more)
ci/: environment.yaml
data-notebooks/: LargeEnsembleTestbedTransformationUpload.ipynb  example_sungduk.py  xarray_to_zarr_Bridges2.ipynb  xarray_to_zarr_example.ipynb  xarray_to_zarr_jerry.ipynb
feedstock/: casm.py  climsim.py  eNATL60.py  godas.py  meta.yaml  metaflux.py  modis-cosp.py  requirements.txt  ww3.py
(+8 files in other folders)
